# src

arm_control_cpp/: CMakeLists.txt  package.xml
arm_control_cpp/src/: send_trajectory.cpp
arm_gazebo_plugins/: CMakeLists.txt  package.xml
arm_moveit_config/: CMakeLists.txt  package.xml
robot_description/: package.xml  setup.py
robot_description/launch/: camera.launch.py  spawn_gazebo.launch.py  spawn_robot.launch.py  world.launch.py
robot_description/robot_description/config/: controllers.yaml
robot_description/robot_description/congif/: controllers.yaml
robot_description/robot_description/urdf/: overhead_camera.urdf  overhead_camera.xacro  robot.urdf.xacro  robot_6dof_arm.urdf.xacro  robot_6dof_arm.xacro  test.xacro
robot_description/robot_description/world/: work_station.sdf
robot_description/world/: pick_place_world.sdf  test.sdf
